# biwords

./: ACKNOWLEDGEMENTS  AUTHORS  Makefile.am  Makefile.in  README  README.md  autogen.sh  configure  configure.ac
biwords/: Makefile.am  Makefile.in  alignment.cc  alignment.h  configure.h.in  count-unaligned-words.cc  filter-alignments.cc  gen-text-to-compress.cc  get-one-side.pl  giza++A3-to-txt.awk  restore-text-multiple-offsets.cc  restore-text.cc  stats-alignments.cc  symmetrize-alignments.cc  utils.cc  utils.h  zfstream.cc  zfstream.h
